# gguf_inspector

./: Cargo.toml  README.md
src/: main.rs
